--- a/packages/nx-firebase/package.json
+++ b/packages/nx-firebase/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@simondotm/nx-firebase",
-  "version": "0.3.3",
+  "name": "@alexjball/nx-firebase",
+  "version": "0.3.4",
   "description": "A Firebase plugin for Nx monorepo workspaces.",
   "author": "Simon Morris",
   "license": "MIT",
